--- a/css/styles-reset.css
+++ b/css/styles-reset.css
@@ -72,3 +72,10 @@ input {
     color: #333; /* Колір тексту */
     margin: 0; /* Знімаємо зовнішні відступи */
 }
+
+/* Відключення каретки на вказаних елементах */
+input[type="button"], textarea,
+button, a, img {
+    caret-color: transparent; /* Встановлюємо прозорий колір для каретки */
+}
+
