--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     --accent-color: #4D5AE5;
     --cloud-color: #F4F4FD;
     --white-color: #FFFFFF;
-    --link-header-color: #404bbf;
+    --link-header-color: #404BBF;
 }
 
 .visually-hidden {
@@ -143,24 +143,24 @@ body {
     margin-top: 72px;
 }
 
+.cart-element {
+    padding-bottom: 32px;
+}
+
 .cart-image {
     width: 360px;
     height: 300px;
 }
 
-.cart-text_container {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    padding: 32px 16px;
-    border: 0.5px solid  var(--border-color);
-    border-top: none;
-}
-
 .cart-title {
+    padding-left: 16px;
+    margin-top: 32px;
+    margin-bottom: 8px;
     color: var(--main-font-color);
     font-size: 20px;
     font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 
 .list {
@@ -173,9 +173,12 @@ body {
 
 
 .cart-description {
+    padding-left: 16px;
     color: var(--light-font-color);
     font-size: 16px;
     font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .footer-container {
