--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ body {
 
 .icon-logo_text {
   font-family: var(--additional-font);
-  color: var(--link-header-color);
+  color: var(--accent-color);
   font-size: 18px;
   letter-spacing: 0.54px;
   text-transform: uppercase;
