--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ address {
 
 .icon-logo_text {
   font-family: var(--additional-font);
-  color: var(--main-font-color);
+  color: var(--accent-color);
   font-size: 18px;
   letter-spacing: 0.54px;
   text-transform: uppercase;
@@ -105,9 +105,7 @@ address {
   cursor: pointer;
 }
 
-.header-address_link {
-    color: var(--light-font-color);
-}
+
 
 .filter-button:hover,
 .filter-button:focus {
@@ -174,7 +172,7 @@ address {
 }
 
 .cover-section_button {
-  color: var(--accent-color);
+  color: var(--white-color);
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
