--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,14 @@ address {
   color: var(--white-color);
 }
 
+.header-address_link link {
+    color: var(--light-font-color);
+}
+
+.header-navigation_a link {
+    color: var(--main-font-color);
+}
+
 .cover-section_button {
   color: var(--white-color);
   font-family: inherit;
