--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,14 @@ body {
     background-color: var(--white-color);
 }
 
+.header-navigation_a {
+    color: #2E2F42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+}
+
 .header-container {
     display: flex;
     justify-content: space-between;
